# ForziumAPI

./: .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .mutmut.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build.py  build_rust.bat  debug.py  gating.yaml  main.py  pyproject.toml  pytest.ini  python_server.py  rbac.db  requirements.txt  run_server.py
.github/workflow/: ci-test.yml
.github/workflows/: ci-test.yml  integration.yml  python.yml  rust.yml
core/: __init__.py  app.py  server.py
core/python_api/: __init__.py
core/rust_engine/: Cargo.toml  build.rs
core/rust_engine/bindings/: api_bindings.rs  error_handlers.rs  mod.rs  type_converters.rs
core/rust_engine/compute/: data_transform.rs  engine.rs  ml_inference.rs  mod.rs  rayon_metrics.rs  resource_limits.rs  simd_ops.rs  tensor_ops.rs  thread_pool.rs
core/rust_engine/memory/: arena_manager.rs  gc_interface.rs  pool_allocator.rs
core/rust_engine/src/: async_compute.rs  error.rs  error_bridge.rs  ffi_tests.rs  gil_utils.rs  lib.rs  numpy_ops.rs
core/rust_engine/src/memory/: mod.rs
core/rust_engine/src/server/: http_engine.rs  mod.rs
core/rust_engine/src/validation/: compute_request.rs  mod.rs
core/service/: __init__.py  gpu.py  orchestration_service.py
datasets/: load_generator_matrix.yaml  network_injection_profiles.yaml  resource_pinning.yaml
docs/: README.md  TREE.md  USER_GUIDE.md  architecture.md  enterprise_adoption_note.md  fastapi_core_analysis.md  normalization_rules.md  performance_baseline.md  pyo3_boundary_microbench.md  python_fallback.md  rayon_pool_utilization.md  release_notes.md  test_topology.md  version_reference_matrix.md
docs/developer/: README.md  performance_baseline.md  rust_python_optimizations.md
forzium/: __init__.py  app.py  asgi.py  auth.py  cli.py  dependency.py  http.py  http2.py  middleware.py  rbac_api.py  responses.py  security.py  task_queue.py  templates.py  testclient.py  websockets.py
forzium/_ffi/: validation.py  zero_copy.py
forzium/plugins/: __init__.py  sample.py
forzium_engine/: __init__.py
infrastructure/: README.md  __init__.py
infrastructure/ci/: gates.yaml
infrastructure/configuration/: __init__.py
infrastructure/deployment/: __init__.py  http2_tls.py
infrastructure/monitoring/: README.md  __init__.py  failover.py  otlp_exporter.py  replay_service.py  soak.py
interfaces/: __init__.py  pydantic_compat.py  router_binding.py
interfaces/grpc/: __init__.py  forzium.proto  forzium_pb2.py  forzium_pb2_grpc.py  server.py
interfaces/protocols/: __init__.py  async_protocol.py
interfaces/shared_types/: __init__.py  cancellation.py  collections.py  compute_request.py  primitives.py
load_generators/: __init__.py  common.py
load_generators/k6/: scenario_runner.js
load_generators/locust/: locustfile.py
load_generators/wasm/: Cargo.toml  README.md
load_generators/wasm/src/: lib.rs
metrics/: chaos_failover_reference.json  load_suite_report.json  performance_baseline.json  performance_candidate.json  pyo3_boundary_overhead.json  rayon_pool_utilization.json  soak_reference_timeseries.json  stability_report.json  streaming_metrics_baseline.json
plugins/: pyproject.toml
plugins copy/: pyproject.toml
plugins copy/sample_plugin/: pyproject.toml
plugins/forzium_plugin/: __init__.py
plugins/sample_plugin/: pyproject.toml
python/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
python/src/forzium/: __init__.py  dependencies.py  metrics.py  routing.py  validators.py
python/src/forzium/_rust/: __init__.py  dependencies.py  response.py
python/src/forzium/api/: __init__.py  v1.py
python/src/forzium/core/: __init__.py  config.py  constants.py
python/src/forzium/dependencies/: __init__.py
python/src/forzium/exceptions/: __init__.py
python/src/forzium/request/: __init__.py  handler.py
python/src/forzium/response/: __init__.py
python/src/forzium/routing/: __init__.py  router.py
python/tests/: test_validators.py
python/tests/benchmarks/: test_ffi_benchmark.py  test_full_stack.py  test_performance.py
python/tests/intergration/: test_full_cycle.py  test_routing.py  test_rust_dependencies.py  test_rust_response.py  test_rust_routing.py
python/tests/unit/: test_dependencies.py  test_routing.py
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/benches/: ffi_benchmark.rs
rust/bindings/: Cargo.toml  pyproject.toml
rust/bindings/src/: dependencies.rs  lib.rs  response.rs  routing.rs  validation.rs
rust/core/: Cargo.toml  _rust_lib.rs
rust/core/coverage/: tarpaulin-report.html
rust/core/src/: api.rs  errors.rs  lib.rs  types.rs  validation.rs
rust/core/src/dependencies/: mod.rs  resolver.rs  types.rs
rust/core/src/domain/: mod.rs
rust/core/src/request/: parser.rs
rust/core/src/response/: mod.rs  tests.rs
rust/core/src/routing/: matcher.rs  mod.rs  parser.rs  types.rs
rust/core/src/validation/: mod.rs  validators.rs
rust/core/tests/: integration_test.rs
scenarios/: release_v0_1_4.json  release_v0_1_4.yaml
scripts/: __init__.py  build_forzium_engine.py  load_suite.py
tests/: __init__.py  conftest.py  http_client.py  normalization.py  test_api.py  test_api_key.py  test_asgi_app.py  test_asgi_middleware_shim.py  test_async_handlers.py  test_auth.py  test_background_tasks.py  test_benchmark_numa.py  test_benchmark_regression.py  test_bindings.py  test_body_validation.py  test_builtin_middlewares.py  test_cancellation.py  test_celery_task_queue.py  test_ci_artifact_packager.py  test_ci_gates.py  test_cli.py  test_cli_plugins.py  test_cli_run.py  test_compute_engine.py  test_content_negotiation.py  test_core_app.py  test_data_transform.py  test_dependency_injection.py  test_docs.py  test_exception_handlers.py  test_failover_chaos.py  test_fastapi_parity.py  test_file_sessions.py  test_file_uploads.py  test_forzium_app.py  test_gpu_ops.py  test_gpu_property.py  test_gpu_service.py  test_graceful_shutdown.py  test_graphql_federation.py  (+85 more)
tests/benchmark/: benchmark_rust_python.py
tests/data/: fastapi_parity_snapshots.json
(+32 files in other folders)
