[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.poetry]
name = "forzium-engine"
version = "0.1.4"
description = "FastAPI-compatible framework with a Rust core."
authors = ["pavanepour-k"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.116.0"
httpx = "^0.27.0"
graphql-core = "^3.2"
pydantic = ">=2.9,<2.10"
grpcio = "^1.60.0"
grpcio-health-checking = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
coverage = "^7.0.0"
hypothesis = "^6.0.0"
mutmut = "^3.3.1"
bandit = "^1.8.6"
black = "^25.1.0"
mypy = "^1.17.1"
ruff = "^0.12.12"
safety = "^3.6.1"
pip-audit = "^2.9.0"
pip-licenses = "^5.0.0"
detect-secrets = "^1.5.0"
pytest-benchmark = "^5.1.0"
pre-commit = "^3.0.0"

[tool.poetry.group.gpu.dependencies]
cupy-cuda12x = {version = "^12.0.0", markers = "platform_machine=='x86_64'"}
cupy-cuda11x = {version = "^11.0.0", markers = "platform_machine=='x86_64'"}

[tool.maturin]
bindings = "pyo3"
manifest-path = "core/rust_engine/Cargo.toml"
python-source = "."

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]


[tool.mutmut]
paths_to_mutate = ["forzium"]

[tool.isort]
profile = "black"