[tool.poetry]
name = "forzium"
version = "0.1.0"
description = "FastAPI Core Rust Refactoring"
authors = ["Forzium Team <team@forzium.com>"]
readme = "README.md"
packages = [{include = "forzium", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.5.1"
pytest = "^7.0"
pytest-cov = "^4.0"
pre-commit = "^3.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core", "maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.black]
line-length = 78
target-version = ['py311']

[tool.ruff]
line-length = 78
select = ["E", "F", "B", "W", "I", "C90", "UP", "S"]
ignore = []
fixable = ["ALL"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
