[tool.poetry]
name = "forzium"
version = "0.1.0"
description = ""
authors = ["pavanepour-k"]

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
prometheus-client = "0.22.1"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
ruff = "0.12.3"
mypy = "1.16.1"
pytest = "8.4.1"
pytest-cov = "6.2.1"
pre-commit = "4.2.0"

[tool.black]
line-length = 78
target-version = ['py311']

[tool.ruff]
line-length = 78
select = ["E", "F", "B", "W", "I", "C90", "UP", "S"]
ignore = []
fixable = ["ALL"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"