[workspace]
members = [
    "core",
    "bindings"
]
resolver = "2"

[workspace.dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
urlencoding = "2.1"
pyo3 = { version = "0.25.1", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
