[package]
name = "forzium_engine"
version = "0.1.4"
edition = "2024"
build = "build.rs"
license = "MIT"
rust-version = "1.90"

[lib]
name = "forzium_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "server-auto", "server-graceful"] }
http-body-util = "0.1"
thiserror = "2.0.16"
rayon = "1.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pyo3-build-config = "0.25.1"

[features]
extension-module = ["pyo3/extension-module"]