[package]
name = "forzium_load_template"
version = "0.1.0"
edition = "2021"
description = "Template WASM module for deterministic ForziumAPI load scheduling"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"