[package]
name = "forzium-bindings"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[lib]
name = "_rust_lib"
crate-type = ["cdylib"]

[dependencies]
forzium = { path = "../core" }
pyo3 = { version = "0.25.1", features = ["extension-module"] }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"