[build-system]
requires = ["maturin>=1.4.0,<2.0"]
build-backend = "maturin"

[project]
name = "forzium"
version = "0.1.0"
description = "FastAPI Core Rust FFI Bindings"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
python-source = "../../python/src"
module-name = "forzium._rust_lib"
bindings = "pyo3"
strip = true
