[package]
name = "forzium"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
urlencoding = "2.1"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
env_logger = "0.11"

[[bench]]
name = "ffi_benchmark"
harness = false
path = "../benches/ffi_benchmark.rs"

[features]
default = []
python-testing = []

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"